test needs output

--- a/.github/workflows/test-workflows.yaml
+++ b/.github/workflows/test-workflows.yaml
@@ -6,8 +6,21 @@ on:
       - main
 
 jobs:
+  set-var:
+    runs-on: ubuntu-latest
+    outputs:
+      deployment_env: ${{ steps.set_var.outputs.var1 }}
+    steps:
+      - name: set-var
+        id: set_var
+        run: |
+          VAR1=${{ github.event_name }}
+          echo "VAR1=${VAR1}
+          echo "::set-output name=deployment_env::${VAR1}"
+
   call-test-job:
+    needs: set-var
     uses: joshxjin/experiments/.github/workflows/test-job.yaml@main
     with:
-      input_var_1: 'var1-call'
+      input_var_1: ${{ needs.trigger.outputs.deployment_env }}
       input_var_2: 'var2-call'
