--- a/.github/workflows/test-workflows.yaml
+++ b/.github/workflows/test-workflows.yaml
@@ -15,7 +15,7 @@ jobs:
         id: set_var
         run: |
           VAR1=${{ github.event_name }}
-          echo "VAR1=${VAR1}
+          echo "VAR1=${VAR1}"
           echo "::set-output name=deployment_env::${VAR1}"
 
   call-test-job:
