--- a/.github/workflows/test-workflows.yaml
+++ b/.github/workflows/test-workflows.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  set-var:
+  setvar:
     runs-on: ubuntu-latest
     outputs:
       var1: ${{ steps.set_var.outputs.var1 }}
@@ -18,9 +18,17 @@ jobs:
           echo "VAR1=${VAR1}"
           echo "::set-output name=var1::${VAR1}"
 
+  use-output:
+    needs: setvar
+    runs-on: ubuntu-latest
+    steps:
+      - name: use-output
+        run: |
+          echo "OUTPUT=${{ needs.setvar.outputs.var1 }}"
+
   call-test-job:
-    needs: set-var
+    needs: setvar
     uses: joshxjin/experiments/.github/workflows/test-job.yaml@main
     with:
-      input_var_1: '${{ needs.trigger.outputs.var1 }}'
+      input_var_1: ${{ needs.setvar.outputs.var1 }}
       input_var_2: 'var2-call'
