--- a/.github/workflows/test-workflows.yaml
+++ b/.github/workflows/test-workflows.yaml
@@ -30,5 +30,5 @@ jobs:
     needs: setvar
     uses: joshxjin/experiments/.github/workflows/test-job.yaml@main
     with:
-      input_var_1: ${{ needs.setvar.outputs.var1 }}
+      input_var_1: '${{ needs.setvar.outputs.var1 }}-call'
       input_var_2: 'var2-call'
