--- a/.github/workflows/test-workflows.yaml
+++ b/.github/workflows/test-workflows.yaml
@@ -5,9 +5,6 @@ on:
     branches:
       - main
 
-env:
-  VAR2: default-var2
-
 jobs:
   setvar:
     runs-on: ubuntu-latest
@@ -36,4 +33,4 @@ jobs:
     uses: joshxjin/experiments/.github/workflows/test-job.yaml@main
     with:
       input_var_1: '${{ needs.setvar.outputs.var1 }}-call'
-      input_var_2: ${{ env.VAR2 }}
+      input_var_2: 'var2-call'
