--- a/.github/workflows/test-job.yaml
+++ b/.github/workflows/test-job.yaml
@@ -45,8 +45,8 @@ jobs:
     - name: Setup The Variables
       run: |
         echo "WORKFLOW_DISPATCH_VAR1=${{ github.event.inputs.input_var_1 }}"
-        echo "WORKFLOW_DISPATCHVAR2=${{ github.event.inputs.input_var_2 }}"
-        echo "WORKFLOW_DISPATCHVAR3=${{ github.event.inputs.input_var_3 }}"
+        echo "WORKFLOW_DISPATCH_VAR2=${{ github.event.inputs.input_var_2 }}"
+        echo "WORKFLOW_DISPATCH_VAR3=${{ github.event.inputs.input_var_3 }}"
 
         echo "WORKFLOW_CALLVAR1=${{ inputs.input_var_1 }}"
         echo "WORKFLOW_CALLVAR2=${{ inputs.input_var_2 }}"
@@ -55,9 +55,9 @@ jobs:
         echo "DEFAULT_VAR2=${{ env.DEFAULT_INPUT_VAR2 }}"
         echo "DEFAULT_VAR3=${{ env.DEFAULT_INPUT_VAR3 }}"
 
-        if [[ ${{ github.event.inputs.input_var_1 }} == "development" ]]; then
+        if [[ "${{ github.event.inputs.input_var_1 }}" == "development" ]]; then
             CLUSTER="dev-dev"
-        elif [[ ${{ github.event.inputs.input_var_1 }} == "partner" ]]; then
+        elif [[ "${{ github.event.inputs.input_var_1 }}" == "partner" ]]; then
             CLUSTER="part-ci"
         else
             CLUSTER="ci"
