--- a/.github/workflows/test-job.yaml
+++ b/.github/workflows/test-job.yaml
@@ -76,7 +76,7 @@ jobs:
         echo "CLUSTER=${{ env.CLUSTER }}"
 
     - name: Print On Dispatch
-      if: (github.event_name == 'repository_dispatch')
+      if: ${{ github.event_name == 'repository_dispatch' }}
       run: |
         echo "dispatch"
 
@@ -86,6 +86,6 @@ jobs:
         echo "main"
 
     - name: Print On Main and Dispatch
-      if: ${{ github.ref == 'refs/heads/main' }} && (github.event_name == 'repository_dispatch')
+      if: ${{ github.ref == 'refs/heads/main' }} && ${{ github.event_name == 'repository_dispatch' }}
       run: |
         echo "main"
