--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,12 +11,19 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Trigger
+        run: |
+          echo "event_name: '${{ github.event_name }}'"
+          echo "Received request from '${{ github.event.client_payload.repository }}'"
+          echo "Test environment: '${{ github.event.client_payload.environment }}'"
+          echo "Test environment: '${{ github.event.client_payload.result }}'"
+    
       - name: Passed
         if: (github.event_name == 'repository_dispatch') && (github.event.client_payload.result == 'pass')
         run: |
           echo "DEPLOY!"
       
-      - name: Files
+      - name: Failed
         if: (github.event_name == 'repository_dispatch') && (github.event.client_payload.result == 'fail')
         run: |
           echo "Failed!"
