--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
           echo "event_name: '${{ github.event_name }}'"
           echo "Received request from '${{ github.event.client_payload.repository }}'"
           echo "Test environment: '${{ github.event.client_payload.environment }}'"
-          echo "Test environment: '${{ github.event.client_payload.result }}'"
+          echo "Result: '${{ github.event.client_payload.result }}'"
     
       - name: Passed
         if: (github.event_name == 'repository_dispatch') && (github.event.client_payload.result == 'pass')
@@ -24,7 +24,7 @@ jobs:
           echo "DEPLOY!"
       
       - name: Failed
-        if: (github.event_name == 'repository_dispatch') && (github.event.client_payload.result == 'fail')
+        if: (github.event_name == 'repository_dispatch') && (github.event.client_payload.result != 'pass')
         run: |
           echo "Failed!"
           exit 1
