--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
 
   call_repo_dispatch:
     needs: [ deploy ]
-    uses: joshxjin/experiment/.github/workflows/trigger-repo-dispatch.yaml@main
+    uses: joshxjin/experiment/.github/workflows/trigger-repo-dispatch.yml@main
     with:
       environment: ${{ needs.deploy_to_environment.outputs.deploy_env }}
       continue_deployment: (needs.deploy.outputs.deploy_env != 'production')
