--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
     needs: [ deploy ]
     uses: joshxjin/experiments/.github/workflows/trigger-repo-dispatch.yml@main
     with:
-      environment: ${{ needs.deploy_to_environment.outputs.deploy_env }}
+      environment: ${{ needs.deploy.outputs.deploy_env }}
       continue_deployment: "${{ needs.deploy.outputs.deploy_env != 'production' }}"
     secrets:
       PAT: ${{ secrets.PAT }}
