add test results

--- a/.github/workflows/trigger-repo-dispatch.yml
+++ b/.github/workflows/trigger-repo-dispatch.yml
@@ -39,10 +39,10 @@ jobs:
     steps:
       - name: Trigger
         run: |
-          RETURN_EVENT_TYPE=`[ ${{ github.event.inputs.continue_deployment || inputs.continue_deployment }} == 'true' ] && echo deploy || echo ''`
-          echo $RETURN_EVENT_TYPE
+          CONTINUE_EVENT_TYPE=`[ ${{ github.event.inputs.continue_deployment || inputs.continue_deployment }} == 'true' ] && echo deploy || echo ''`
+          echo $CONTINUE_EVENT_TYPE
 
           curl -X POST https://api.github.com/repos/joshxjin/experiments-2/dispatches \
           -H 'Accept: application/vnd.github.v3+json' \
           -H 'Authorization: Bearer ${{ secrets.PAT }}' \
-          --data '{"event_type": "on_demand", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'", "environment": "${{ github.event.inputs.environment || inputs.environment }}", "return_event_type":  "'"${RETURN_EVENT_TYPE}"'" }}'
+          --data '{"event_type": "on_demand", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'", "environment": "${{ github.event.inputs.environment || inputs.environment }}", "continue_event_type":  "'"${CONTINUE_EVENT_TYPE}"'" }}'
