--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,19 @@ jobs:
       deploy_env: ${{ steps.passed.outputs.deploy_env }}
     steps:
       - name: Trigger
-        id: trigger
         run: |
           echo "event_name: '${{ github.event_name }}'"
           echo "Received request from '${{ github.event.client_payload.repository }}'"
           echo "Test environment: '${{ github.event.client_payload.environment }}'"
           echo "Result: '${{ github.event.client_payload.result }}'"
-    
+
+      - name: Record Result
+        run: |
+          curl -X POST https://api.github.com/repos/joshxjin/experiments/dispatches \
+          -H 'Accept: application/vnd.github.v3+json' \
+          -H 'Authorization: Bearer ${{ secrets.PAT }}' \
+          --data '{"event_type": "e2e_test_result_${{ github.event.client_payload.environment }}", "client_payload": { "result": "'"${{ github.event.client_payload.result }}"'" }}'
+
       - name: Passed
         id: passed
         if: (github.event_name == 'repository_dispatch') && (github.event.client_payload.result == 'pass')
