stop infinite calls

--- a/.github/workflows/e2e-test-result-partner.yml
+++ b/.github/workflows/e2e-test-result-partner.yml
@@ -1,8 +1,8 @@
 name: E2E Tests - Partner
 
 on:
-  repository_dispatch:
-    type: [ e2e_test_result_partner ]
+#  repository_dispatch:
+#    type: [ e2e_test_result_partner ]
 
 jobs:
   results:
