--- a/.github/workflows/e2e-test-result-stage.yml
+++ b/.github/workflows/e2e-test-result-stage.yml
@@ -2,7 +2,7 @@ name: E2E Tests - Stage
 
 on:
   repository_dispatch:
-    type: [ e2e_test_result_stage ]
+    type: [ e2e-test-result-stage ]
 
 jobs:
   results:
