--- a/.github/workflows/e2e-test-result-dev.yml
+++ b/.github/workflows/e2e-test-result-dev.yml
@@ -2,12 +2,19 @@ name: E2E Tests - Dev
 
 on:
   repository_dispatch:
-    type: [ e2e-test-result-development ]
+    type: [e2e-test-result-development]
 
 jobs:
   results:
     runs-on: ubuntu-latest
     steps:
+      - name: Trigger
+        run: |
+          echo "Event type: '${{ github.event.event_type }}'"
+          echo "Received request from '${{ github.event.client_payload.repository }}'"
+          echo "Environment: '${{ github.event.client_payload.environment }}'"
+          echo "Result: '${{ github.event.client_payload.result }}'"
+
       - name: Passed
         if: (github.event.client_payload.result == 'success')
         run: |
