--- a/.github/workflows/e2e-test-result-production.yml
+++ b/.github/workflows/e2e-test-result-production.yml
@@ -8,6 +8,13 @@ jobs:
   results:
     runs-on: ubuntu-latest
     steps:
+      - name: Trigger
+        run: |
+          echo "Event type: '${{ github.event.event_type }}'"
+          echo "Received request from '${{ github.event.client_payload.repository }}'"
+          echo "Environment: '${{ github.event.client_payload.environment }}'"
+          echo "Result: '${{ github.event.client_payload.result }}'"
+
       - name: Passed
         if: (github.event.client_payload.result == 'success')
         run: |
