--- a/.github/workflows/test-workflows.yaml
+++ b/.github/workflows/test-workflows.yaml
@@ -34,3 +34,5 @@ jobs:
     with:
       input_var_1: '${{ needs.setvar.outputs.var1 }}-call'
       input_var_2: 'var2-call'
+    secrets:
+      CREDS: ${{ secrets.CREDS }}
