--- a/.github/workflows/test-workflows.yaml
+++ b/.github/workflows/test-workflows.yaml
@@ -37,7 +37,8 @@ jobs:
       - name: set-env
         id: set_env
         run: |
-          -x
+          set -xue
+
           echo "set env to development"
           CLIENT_ID=$(echo '${{ secrets.CREDS }}' | jq -r ".clientId")
           CLIENT_SECRET=$(echo '${{ secrets.CREDS }}' | jq -r ".clientSecret")
