--- a/.github/workflows/test-workflows.yaml
+++ b/.github/workflows/test-workflows.yaml
@@ -50,6 +50,7 @@ jobs:
           echo "::set-output name=creds::${CREDS}"
 
   call-test-job:
+    environment: 'development'
     needs: [ setvar, setenv ]
     uses: joshxjin/experiments/.github/workflows/test-job.yaml@main
     with:
