--- a/.github/workflows/test-workflows.yaml
+++ b/.github/workflows/test-workflows.yaml
@@ -56,4 +56,4 @@ jobs:
       input_var_1: '${{ needs.setvar.outputs.var1 }}-call'
       input_var_2: 'var2-call'
     secrets:
-      CREDS: ${{ needs.setenv.outputs.creds }}
+      CREDS: ${{ secrets.CREDS }}
