--- a/.github/workflows/trigger-repo-dispatch.yml
+++ b/.github/workflows/trigger-repo-dispatch.yml
@@ -35,7 +35,8 @@ jobs:
     defaults:
       run:
         shell: bash
-
+    env:
+      RUN_URL: "${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}"
     steps:
       - name: Trigger
         run: |
@@ -47,4 +48,4 @@ jobs:
           curl -X POST https://api.github.com/repos/joshxjin/experiments-2/dispatches \
           -H 'Accept: application/vnd.github.v3+json' \
           -H 'Authorization: Bearer ${{ secrets.PAT }}' \
-          --data '{"event_type": "on-demand", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'", "environment": "${{ github.event.inputs.environment || inputs.environment }}", "continue_event_type":  "'"${CONTINUE_EVENT_TYPE}"'", "link": "'"${LINK}"'" }}'
+          --data '{"event_type": "on-demand", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'", "environment": "${{ github.event.inputs.environment || inputs.environment }}", "continue_event_type":  "'"${CONTINUE_EVENT_TYPE}"'", "link": "'"${{ env.RUN_URL }}"'" }}'
