--- a/.github/workflows/test-github-event.yml
+++ b/.github/workflows/test-github-event.yml
@@ -11,8 +11,8 @@ on:
   workflow_call:
 
   # every 5mins Mon -> Fri
-  schedule:
-    - cron: '*/5 * * * 1-5'
+#  schedule:
+#    - cron: '*/5 * * * 1-5'
 
 jobs:
   event-name:
