--- a/.github/workflows/test-boolean.yaml
+++ b/.github/workflows/test-boolean.yaml
@@ -24,14 +24,14 @@ jobs:
       id: pr_trigger
       if: (github.event_name == 'pull_request')
       run: |
-        BOOL_VAR=false
+        BOOL_VAR='false'
         echo "::set-output name=bool_var::${BOOL_VAR}"
 
     - name: pull request
       id: dispatch_trigger
       if: (github.event_name == 'workflow_dispatch')
       run: |
-        BOOL_VAR=${{ github.event.client_payload.input_var_1 }}
+        BOOL_VAR='${{ github.event.client_payload.input_var_1 }}'
         echo "::set-output name=bool_var::${BOOL_VAR}"
 
   do_thing_true:
