--- a/.github/workflows/test-job.yaml
+++ b/.github/workflows/test-job.yaml
@@ -13,6 +13,9 @@ jobs:
         shell: bash
 
     steps:
+      - name: checkout repo - current branch
+        uses: actions/checkout@v2
+
       - name: Build Version
         id: buildVersion
         uses: ./.github/actions/build
