--- a/.github/workflows/replicate-file.yaml
+++ b/.github/workflows/replicate-file.yaml
@@ -11,7 +11,6 @@ on:
 env:
   current_project_path: "experiments"
   target_project_path: "experiments_2"
-  copy_file: "api_spec.yaml"
 
 jobs:
     replicate-file:
@@ -36,7 +35,7 @@ jobs:
           run: |
             FILE=./${{ env.current_project_path }}/api/${{ env.copy_file }}
             echo "Copying $FILE"
-            cp -R ./${{ env.current_project_path }}/api/${{ env.copy_file }} ./${{ env.target_project_path }}/api/${{ env.copy_file }}
+            cp -R ./${{ env.current_project_path }}/api ./${{ env.target_project_path }}/api
 
         - name: Push experiment-2
           env:
