--- a/.github/workflows/replicate-file.yaml
+++ b/.github/workflows/replicate-file.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - 'api/api_spec.yaml'
+      - 'api/'
 
 env:
   current_project_path: "experiments"
