--- a/.github/workflows/replicate-file.yaml
+++ b/.github/workflows/replicate-file.yaml
@@ -35,7 +35,7 @@ jobs:
           run: |
             FILE=./${{ env.current_project_path }}/api/${{ env.copy_file }}
             echo "Copying $FILE"
-            cp -R ./${{ env.current_project_path }}/api ./${{ env.target_project_path }}/api
+            cp -R ./${{ env.current_project_path }}/api ./${{ env.target_project_path }}
 
         - name: Push experiment-2
           env:
